--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
 		"morgan": "^1.10.0",
 		"pg": "^8.10.0",
 		"react-responsive-carousel": "^3.2.23",
+		"react-slick": "^0.29.0",
+		"slick-carousel": "^1.8.1",
 		"winston": "^3.8.2"
 	},
 	"engines": {
