--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"helmet": "^6.1.5",
 		"morgan": "^1.10.0",
 		"pg": "^8.10.0",
+		"pigeon-maps": "^0.21.3",
 		"winston": "^3.8.2"
 	},
 	"engines": {
