--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.11.3",
     "@strapi/provider-upload-cloudinary": "^4.11.3",
     "@strapi/strapi": "4.11.3",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "strapi-plugin-transformer": "^3.1.0"
   },
   "author": {
     "name": "A Strapi developer"
