--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@strapi/provider-upload-cloudinary": "^4.11.3",
     "@strapi/strapi": "4.11.3",
     "pg": "8.8.0",
+    "strapi-plugin-multi-select": "^1.1.0",
     "strapi-plugin-transformer": "^3.1.0"
   },
   "author": {
