--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,20 +1,30 @@
 {
 	"env": {
-		"browser": true
+		"browser": true,
+		"es2020": true
 	},
-	"extends": ["plugin:jsx-a11y/strict", "plugin:react/recommended"],
-	"plugins": ["react-hooks"],
-	"rules": {
-		"react/jsx-tag-spacing": "error",
-		"react/no-unused-prop-types": "error",
-		"react/prop-types": "off",
-		"react/react-in-jsx-scope": "off",
-		"react-hooks/rules-of-hooks": "error",
-		"react-hooks/exhaustive-deps": "error"
+	"extends": [
+		"eslint:recommended",
+		"plugin:react/recommended",
+		"plugin:react/jsx-runtime",
+		"plugin:react-hooks/recommended",
+		"plugin:jsx-a11y/strict"
+	],
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module"
 	},
 	"settings": {
 		"react": {
-			"version": "detect"
+			"version": "18.2"
 		}
+	},
+	"plugins": ["react-refresh", "react-hooks"],
+	"rules": {
+		"react-refresh/only-export-components": "warn",
+		"react/jsx-tag-spacing": "error",
+		"react/no-unused-prop-types": "error",
+		"react-hooks/rules-of-hooks": "error",
+		"react-hooks/exhaustive-deps": "error"
 	}
 }
