--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
 	"editor.formatOnSave": true,
-	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": true
-	},
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	// "editor.codeActionsOnSave": {
+	// 	"source.fixAll.eslint": true
+	// },
 	"files.eol": "\n"
 }
