--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "react-router-dom": "^6.14.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
