--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,14 +1,15 @@
 {
 	"env": {
 		"browser": true,
-		"es2020": true
+		"es2021": true
 	},
 	"extends": [
 		"eslint:recommended",
 		"plugin:react/recommended",
 		"plugin:react/jsx-runtime",
 		"plugin:react-hooks/recommended",
-		"plugin:jsx-a11y/strict"
+		"plugin:jsx-a11y/strict",
+		"prettier"
 	],
 	"parserOptions": {
 		"ecmaVersion": "latest",
@@ -19,13 +20,18 @@
 			"version": "18.2"
 		}
 	},
-	"plugins": ["react-refresh", "react-hooks"],
+	"plugins": ["react", "react-refresh"],
 	"rules": {
+		"indent": ["error", "tab"],
+		"linebreak-style": ["error", "unix"],
+		"quotes": ["error", "double"],
+		"semi": ["error", "always"],
 		"react-refresh/only-export-components": "warn",
 		"react/jsx-tag-spacing": "error",
-		// "react/no-unused-prop-types": "error",
+		"react/no-unused-prop-types": "off",
 		"react/prop-types": "off",
+		"react/react-in-jsx-scope": "off",
 		"react-hooks/rules-of-hooks": "error",
-		"react-hooks/exhaustive-deps": "error"
+		"react-hooks/exhaustive-deps": "warn"
 	}
 }
