--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -20,7 +20,7 @@
 			"version": "18.2"
 		}
 	},
-	"plugins": ["react", "react-refresh"],
+	"plugins": ["react", "react-refresh", "react-hooks"],
 	"rules": {
 		"indent": ["error", "tab"],
 		"linebreak-style": ["error", "unix"],
