--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@tanstack/react-query": "^4.29.19",
 		"pigeon-maps": "^0.21.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
