--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.10.1",
 		"react-router-dom": "^6.14.1",
-		"react-scroll-to-top": "^3.0.0"
+		"react-scroll-to-top": "^3.0.0",
 		"react-scroll": "^1.8.9",
 		"react-slick": "^0.29.0",
 		"slick-carousel": "^1.8.1"
