--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
 	"dependencies": {
 		"@tanstack/react-query": "^4.29.19",
 		"html-react-parser": "^4.0.0",
+		"photoswipe": "^5.3.8",
 		"pigeon-maps": "^0.21.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.10.1",
 		"react-mailchimp-subscribe": "^2.1.3",
+		"react-photoswipe-gallery": "^2.2.7",
 		"react-router-dom": "^6.14.1",
 		"react-scroll": "^1.8.9",
 		"react-slick": "^0.29.0",
