--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -32,5 +32,8 @@ services:
       - ./package-lock.json:/opt/package-lock.json
       - ./.env:/opt/app/.env
       - ./public/uploads:/opt/app/public/uploads
+      # Certificates(?)
+      # Mount the /etc/ssl folder from the EC2 instance to the Docker Container
+      # - /etc/ssl:/etc/ssl
     ports:
       - "80:1337"
