--- a/.github/workflows/server-build-and-update-docker-image-and-update-ec2.yml
+++ b/.github/workflows/server-build-and-update-docker-image-and-update-ec2.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build the Docker Image
-        run: docker build -t bazmurphy/lhfb-server:latest server
+        run: docker build -t bazmurphy/lhfb-server:latest .
 
       - name: Login to DockerHub
         env:
